@@ -1,3 +1,8 @@
+2012-05-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/loader/i386/linux.c (grub_linux_boot): Use right version.
+	(grub_cmd_linux): Likewise.
+
 2012-05-31  Christer Weinigel <christer@weinigel.se>
 
 	Fix EHCI low-speed.
